task5/deploy/zookeeper/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zookeeper-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: zookeeper
                port:
                  number: 2181
